# ROV_Simulator

./: README.md  light.yaml  unknow.yaml
djs/: USBL.json  main.cpp  poindclouds.json  point.txt  rov_pose.json  vessel_gps.json
src/iau_ros_hmi/: .iau_ros_hmi_node.cpp.swp  CMakeLists.txt  CoorConv.hpp  README.md  iau_ros_hmi_node.cpp  iau_ros_hmi_test_node.cpp  jpg_kit.cpp  jpg_kit.h  package.xml  robot.pb.cc  robot.pb.h
src/iau_ros_hmi/msg/: CloudControl.msg  HmiControl.msg  Location.msg  RemoteControl.msg  RobotControl.msg  RobotSensor.msg  RobotState.msg  search_point.msg
src/iau_ros_hmi/msgq/: CMakeLists.txt  msgq.c  msgq.h
src/polygon/: CMakeLists.txt  package.xml
src/polygon/src/: polygon.cpp
src/sh/: begin.sh
src/ship/: CMakeLists.txt  package.xml
src/ship/launch/: test.launch  test1.launch
src/ship/src/: ship.cpp  test.cpp
src/start_simulation/: CMakeLists.txt  package.xml
src/start_simulation/launch/: start_simulation.launch  start_simulation_without_iau_gui.launch  start_simulation_without_seabed.launch
src/start_simulation/world/: empty_world.launch
