<package>
  <name>iau_ros_hmi</name>
  <version>0.1.0</version>
  <description>
    hmi for robot.
  </description>
  <maintainer email="dev@isurro.com">众向科技</maintainer>
  <author>众向科技</author>
  <license>All rights reserved.</license>

  <buildtool_depend>catkin</buildtool_depend>
  <build_depend>message_generation</build_depend>
  <build_depend>message_runtime</build_depend>
  <build_depend>roscpp</build_depend>
  <build_depend>sensor_msgs</build_depend>
  <build_depend>tf</build_depend>

  <run_depend>message_generation</run_depend>
  <run_depend>message_runtime</run_depend>
  <run_depend>roscpp</run_depend>
  <run_depend>sensor_msgs</run_depend>
  <run_depend>tf</run_depend>

  <build_depend>opencv2</build_depend>
  <run_depend>opencv2</run_depend>
</package>
